--- a/loops.html
+++ b/loops.html
@@ -7,7 +7,7 @@
 <body>
 
 <!-- <script src="js/for_loops.js"></script> -->
-<script src="JS/break_and_continue.js"></script>
-
+<!-- <script src="JS/break_and_continue.js"></script> -->
+<script src="js/while.js"></script>
 </body>
 </html>
