part 1 of html elements done

--- a/welcome.html
+++ b/welcome.html
@@ -5,8 +5,61 @@
     <title>Welcome to My World</title>
 </head>
 <body>
-
-
-"Hello World!"
+<h1>Welcome to Veridian Dynammics!</h1>
+<p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
+<hr>
+<h3>Core Values</h3>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<h3>Our Process</h3>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<h3>2020 Vision</h3>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 30%</li>
+</ul>
+<hr>
+<h3>Company Vision</h3>
+<img src="https://images.pexels.com/photos/12899105/pexels-photo-12899105.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="250px">
+<img src="https://images.pexels.com/photos/12899095/pexels-photo-12899095.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
+<img src="https://images.pexels.com/photos/1181462/pexels-photo-1181462.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
+<img src="https://images.pexels.com/photos/8938641/pexels-photo-8938641.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
+<h3>Our Product</h3>
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
+<br>
+<em>All products come with our quality guarantee</em>
+<br>
+<br>
+<a href="#top">Go to the top of the page.</a>
 </body>
+
 </html>
