made some more changes, but still stuck on putting info under pix...tried new trs

--- a/github.html
+++ b/github.html
@@ -5,6 +5,7 @@
     <title>Github Team Page</title>
 </head>
 <body>
+<header>
 <img src="http://placeholder.pics/svg/30">
 <ul>
     <li><a href="https://github.com/pulls">Pull requests</a></li>
@@ -12,6 +13,8 @@
     <li><a href="https://github.com/marketplace">Marketplace</a></li>
     <li><a href="https://github.com/explore">Explore</a></li>
 </ul>
+</header>
+<nav>
 <img src="http://placeholder.pics/svg/48x48/1E7FFF-1E4DFF/4B3FFF-3437FF">
 <h5>Codeup</h5>
 <ul>
@@ -21,19 +24,31 @@
     <li><a href="https://github.com/drent23/azeban-codeup-web-exercises/projects?query=is%3Aopen">Projects</a></li>
     <li><a href="https://github.com/drent23/azeban-codeup-web-exercises/settings">Settings</a></li>
 </ul>
+</nav>
+<main>
 <table>Codeup's dev team
     <tr>
-        <td><a href="https://fer-uig.glitch.me/" alt="Kent Beck"></a></td>
+        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=1" alt="user icon">Kent Beck</a></td>
+        <td>KentBeck</td>
+        <td>Member</td>
+        <td>X team members</td>
     </tr>
     <tr>
-        <td><a href="https://fer-uig.glitch.me" alt="Codeup Staff"></a></td>
+        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=777" alt="user ico">Codeup Staff</a></td>
+        <td>CodeupStaff</td>
+        <td>Member</td>
+        <td>X team members</td>
     </tr>
     <tr>
-        <td><a href="https://fer-uig.glitch.me" alt="Martin F"></a></td>
+        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=999" alt="user icon">Martin F</a></td>
+        <td>MartinF</td>
+        <td>Member</td>
+        <td>X team members</td>
     </tr>
 </table>
-
-
-<footer><a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">Terms</a> <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">Privacy</a> <a href="https://github.com/security">Security</a> <a href="https://www.githubstatus.com">Status</a> <a href="https://docs.github.com/en">Help</a> <a href="https://support.github.com">Contact</a> <a href="https://docs.github.com/en/developers">API</a> <a href="https://github.com/services/">Training</a></footer>
+</main>
+<br>
+<footer>© 2018 Github, Inc. <a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">Terms</a> <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">Privacy</a> <a href="https://github.com/security">Security</a> <a href="https://www.githubstatus.com">Status</a> <a href="https://docs.github.com/en">Help</a> <a href="https://support.github.com">Contact</a> <a href="https://docs.github.com/en/developers">API</a> <a href="https://github.com/services/">Training</a>
+</footer>
 </body>
 </html>
