--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@
     <title>Welcome to My World</title>
 </head>
 <body>
-<h1>Welcome to Veridian Dynammics!</h1>
+<h1 id="top">Welcome to Veridian Dynammics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
 <hr>
 <h3>Core Values</h3>
@@ -56,7 +56,7 @@
     </tr>
 </table>
 <br>
-<em>All products come with our quality guarantee</em>
+<em>All products come with our quality guarantee™.</em>
 <br>
 <br>
 <a href="#top">Go to the top of the page.</a>
