html exercises complete...i think

--- a/github.html
+++ b/github.html
@@ -28,22 +28,13 @@
 <main>
 <table>Codeup's dev team
     <tr>
-        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=1" alt="user icon">Kent Beck</a></td>
-        <td>KentBeck</td>
-        <td>Member</td>
-        <td>X team members</td>
+        <td><img src="https://fer-uig.glitch.me?uuid=1" alt="user icon"><a href="#">Kent Beck</a><figcaption>KentBeck<br>Member<br>X team members</figcaption></td>
     </tr>
     <tr>
-        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=777" alt="user ico">Codeup Staff</a></td>
-        <td>CodeupStaff</td>
-        <td>Member</td>
-        <td>X team members</td>
+        <td><img src="https://fer-uig.glitch.me?uuid=777" alt="user icon"><a href="#">Codeup Staff</a><figcaption>CodeupStaff<br>Member<br>X team members</figcaption></td>
     </tr>
     <tr>
-        <td><a href="#"> <img src="https://fer-uig.glitch.me?uuid=999" alt="user icon">Martin F</a></td>
-        <td>MartinF</td>
-        <td>Member</td>
-        <td>X team members</td>
+        <td><img src="https://fer-uig.glitch.me?uuid=999" alt="user icon"><a href="#">">Martin F</a><figcaption>MartinF<br>Member<br>X team members</figcaption></td>
     </tr>
 </table>
 </main>
