--- a/github.html
+++ b/github.html
@@ -34,7 +34,7 @@
         <td><img src="https://fer-uig.glitch.me?uuid=777" alt="user icon"><a href="#">Codeup Staff</a><figcaption>CodeupStaff<br>Member<br>X team members</figcaption></td>
     </tr>
     <tr>
-        <td><img src="https://fer-uig.glitch.me?uuid=999" alt="user icon"><a href="#">">Martin F</a><figcaption>MartinF<br>Member<br>X team members</figcaption></td>
+        <td><img src="https://fer-uig.glitch.me?uuid=999" alt="user icon"><a href="#">Martin F</a><figcaption>MartinF<br>Member<br>X team members</figcaption></td>
     </tr>
 </table>
 </main>
