--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to My World</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1 id="top">Welcome to Veridian Dynammics!</h1>
+<h1 class="fancy-header" id="#top">Welcome to Veridian Dynammics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
 <hr>
 <h3>Core Values</h3>
