--- a/forms.html
+++ b/forms.html
@@ -5,37 +5,40 @@
     <title>Register With Us</title>
 </head>
 <body>
+<h1 style="text-align: center">Registration Page</h1>
 
 <form method="POST" action="https://requestinspector.com/inspect/01grph307256eejebnckc6kfyb">
 
-    <h1 style="text-align: center">Registration Page</h1>
     <label for="email">Email</label>
     <input id="email" name="email" type="text" placeholder="Enter your email address">
     <input type="hidden" name="username" value="email">
+
     <br><br>
 
     <label for="password">Password</label>
     <input id="password" name="password" type="password" placeholder="Enter your password">
+
     <br><br>
 
     <label for="bio">Bio</label>
-    <input id="bio" name="bio" type="textarea" placeholder="Please tell us a little about yourself">
+    <textarea id="bio" name="bio" type="textarea" placeholder="Please tell us a little about yourself"></textarea>
+
     <br><br>
 
     <h4>How did you hear about us?</h4>
-    <label for="Billboard">
-        Billboard <input id="Billboard" type="radio" name="how did you hear" value="Billboard"></label><br>
-    <label for="Radio">
-        Radio <input id="Radio" type="radio" name="how did you hear" value="Radio"></label><br>
-    <label for="Internet">
-        Internet <input id="Internet" type="radio" name="how did you hear" value="Internet"></label><br>
-    <label for="Other">
-        Other <input id="Other" type="radio" name="how did you hear" value="Other"></label><br>
-    <br>
-    <br>
+    <label for="Billboard"></label>
+        Billboard <input id="Billboard" type="radio" name="source" value="Billboard"><br>
+    <label for="Radio"></label>
+        Radio <input id="Radio" type="radio" name="source" value="Radio"><br>
+    <label for="Internet"></label>
+        Internet <input id="Internet" type="radio" name="source" value="Internet"><br>
+    <label for="Other"></label>
+        Other <input id="Other" type="radio" name="source" value="Other"><br>
+
+    <br><br>
 
     <h4>What web browser are you currently using?</h4>
-    <select name="What web browser are you using?">
+    <select name="browser">
         <option value="Edge">Edge</option>
         <option value="Chrome">Chrome</option>
         <option value="Firefox">Firefox</option>
