selectors exercise complete, will add to tonight

--- a/welcome.html
+++ b/welcome.html
@@ -9,31 +9,31 @@
 <h1 class="fancy-header" id="#top">Welcome to Veridian Dynammics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
 <hr>
-<h3>Core Values</h3>
+<h3 class="fancy-header">Core Values</h3>
 <ul>
     <li>Competence</li>
     <li>Involvement</li>
     <li>Technology</li>
 </ul>
-<h3>Our Process</h3>
+<h3 class="fancy-header">Our Process</h3>
 <ol>
     <li>Plan</li>
     <li>Evaluate</li>
     <li>Implement</li>
 </ol>
-<h3>2020 Vision</h3>
+<h3 class="fancy-header">2020 Vision</h3>
 <ul>
     <li>Become #1 in Technology</li>
     <li>Increase Success by 20%</li>
     <li>Increase Business by 30%</li>
 </ul>
 <hr>
-<h3>Company Vision</h3>
+<h3 class="fancy-header">Company Vision</h3>
 <img src="https://images.pexels.com/photos/12899105/pexels-photo-12899105.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="250px">
 <img src="https://images.pexels.com/photos/12899095/pexels-photo-12899095.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
 <img src="https://images.pexels.com/photos/1181462/pexels-photo-1181462.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
 <img src="https://images.pexels.com/photos/8938641/pexels-photo-8938641.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
-<h3>Our Product</h3>
+<h3 class="fancy-header">Our Product</h3>
 <table>
     <tr>
         <th>Plan</th>
