--- a/welcome.html
+++ b/welcome.html
@@ -10,23 +10,29 @@
 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
 <hr>
 <h3 class="fancy-header">Core Values</h3>
-<ul>
-    <li>Competence</li>
-    <li>Involvement</li>
-    <li>Technology</li>
-</ul>
+<div class="container">
+    <ul class="lists">
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ul>
+</div>
 <h3 class="fancy-header">Our Process</h3>
-<ol>
+<div class="container">
+<ol class="lists">
     <li>Plan</li>
     <li>Evaluate</li>
     <li>Implement</li>
 </ol>
+</div>
 <h3 class="fancy-header">2020 Vision</h3>
-<ul>
+<div class="container">
+    <ul class="lists">
     <li>Become #1 in Technology</li>
     <li>Increase Success by 20%</li>
     <li>Increase Business by 30%</li>
 </ul>
+</div>
 <hr>
 <h3 class="fancy-header">Company Vision</h3>
 <img src="https://images.pexels.com/photos/12899105/pexels-photo-12899105.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="250px">
