pt 1 complete...I think

--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1 class="fancy-header" id="#top">Welcome to Veridian Dynammics!</h1>
+<div class="container">
 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
+</div>
 <hr>
 <h3 class="fancy-header">Core Values</h3>
 <div class="container">
@@ -40,6 +42,7 @@
 <img src="https://images.pexels.com/photos/1181462/pexels-photo-1181462.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
 <img src="https://images.pexels.com/photos/8938641/pexels-photo-8938641.jpeg?auto=compress&cs=tinysrgb&w=600" width="300px" height="200px">
 <h3 class="fancy-header">Our Product</h3>
+<div class="container">
 <table>
     <tr>
         <th>Plan</th>
@@ -62,6 +65,7 @@
         <td>Unlimited Support</td>
     </tr>
 </table>
+</div>
 <br>
 <em>All products come with our quality guarantee™.</em>
 <br>
