added html and css files

--- a/flexbox-footer-exercise.html
+++ b/flexbox-footer-exercise.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flexbox Nav</title>
+    <title>Flexbox Footer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
     <link rel="stylesheet" href="css/flexbox-footer-exercise.css">
