made changes based on review

--- a/media-queries.html
+++ b/media-queries.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Media Queries</title>
   <link rel="stylesheet" href="css/media-queries.css">
+  <link rel="stylesheet" href="https://unpkg.com/@fortawesome/fontawesome-free@5.15.3/css/all.min.css">
 </head>
 <body>
 <div class="alert-info hidden-on-desktop">
@@ -33,7 +34,11 @@
 <footer>
   <p>(c) 2017 All rights reserved</p>
   <div id="social-media-links">
-
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-snapchat"></i></a>
+    <a href="#"><i class="fab fa-pinterest"></i></a>
   </div>
 </footer>
 </body>
