made some notes and other methods via review

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -59,8 +59,14 @@
       }
     }
 
+    // if(i % 2 == 0) {
+    // listItems[i].style.color = "gray"
+
+
+
     // TODO: Uncomment the next line and get all elements with class name sub-paragraph
     var subParagraphs = document.getElementsByClassName("sub-paragraph");
+    // = document.querySelector(".sub-paragraph"
 
     // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
     subParagraphs[0].innerHTML = "Mission Accomplished!";
