--- a/jquery.exercises.html
+++ b/jquery.exercises.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-
+<h1 class="mainHeading text-center">This is my JQuery exercise!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <p class="mainParagraph" id="firstPara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aut beatae consectetur dolorum eius expedita iure laborum optio qui reprehenderit rerum, sapiente sequi voluptas voluptate.</p>
+            <ul class="mainList" id="codeup"><label>Types of Selectors</label>
+                <li class="listItems">ID</li>
+                <li class="listItems">Class</li>
+                <li class="listItems">Element</li>
+                <li class="listItems">Multiple</li>
+                <li class="listItems">All</li>
+            </ul>
+        </div>
+        <div class="col-4">
+            <p class="codeup" id="secondPara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eligendi est exercitationem impedit necessitatibus non placeat quisquam. Alias amet dolorem earum, illo illum quis velit.</p>
+        </div>
+        <div class="col-4">
+            <p class="codeup" id="thirdPara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta, doloribus ea enim et itaque labore nemo nobis odio placeat, quasi rem saepe, vel vitae?</p>
+        </div>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script>
     alert("DOM loaded!")
+    var firstParaContents = $("#firstPara").html();
+    alert(firstParaContents);
+    var secondParaContents = $("#secondPara").html();
+    alert(secondParaContents);
+    $('.codeup').css('border', '1px dashed red');
+    $('li').css('font-size', '20px');
+    $('h1, p, li').css('background-color', 'yellow');
+    var headingAlert = $('h1').html();
+    alert(headingAlert);
 </script>
 </body>
 </html>
