still working but complete

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -26,6 +26,32 @@
   <dd class="invisible">Some key features of Opera include its built-in VPN and its usage of the Chromium page-rendering engine</dd>
   <dd class="invisible">Additionally, its built-in ad blocker, which also blocks crypto-mining and scripts and trackers, allows it to consume much less data</dd>
 </dl>
+<h3 id="googleChrome">Chrome Fun Facts</h3>
+  <ul id="national-parks">
+    <li>Arches</li>
+    <li>Badlands</li>
+    <li>Carlsbad Caverns</li>
+    <li>Denali</li>
+    <li>Everglades</li>
+  </ul>
+<h3 id="microsoftEdge">Edge Fun Facts</h3>
+  <ul id="state-parks-texas">
+    <li>Abilene</li>
+    <li>Big Bend</li>
+    <li>Choke Canyon</li>
+    <li>Davis Mountains</li>
+    <li>Enchanted Rock</li>
+  </ul>
+<h3 id="appleSafari">Safari Fun Facts</h3>
+  <ul id="state-parks-texas">
+    <li>Abilene</li>
+    <li>Big Bend</li>
+    <li>Choke Canyon</li>
+    <li>Davis Mountains</li>
+    <li>Enchanted Rock</li>
+</ul>
+<!- jQuery button for bold lis -->
+<button id="liYellow">Click here to highlight last fun fact</button><br>
 <!- jQuery link and links to site -->
 <a type="button" id="hiddenLink" href="#">Click here to show/hide answers</a><br>
 <a href="https://www.google.com/chrome/">Click to go to Google Chrome download page</a><br>
