--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -10,24 +10,27 @@
 </head>
 <body class="text-light bg-primary">
 
-<h1 class="text-center">Black Hole of Blogs</h1>
-<div class="container">
+<h1 class="text-center text-decoration-underline">Black Hole of Blogs</h1>
+<div class="container-fluid">
     <div class="row">
-        <div class="col-6" id="posts"></div>
-        <form action="#" method="POST" class="col-6 ">
-            <label for="bloggerName" >Blogger</label>
-            <input type="text" name="bloggerName" id="bloggerName"placeholder="Enter your name here">
+        <div class="col-8 d-grid" id="posts"></div>
+        <form action="#" method="POST" class="col-4">
+            <label for="bloggerName" class="form-label">Blogger</label>
+            <input type="text" name="bloggerName" id="bloggerName" class="form-control" placeholder="Enter your name here">
             <br>
-            <label for="bloggerEmail" >Email</label>
-            <input type="text" name="email" id="bloggerEmail" placeholder="Enter your email address">
-
-            <label for="blogPost">Comments</label>
-            <textarea name="comment" id="blogPost" cols="30" rows="10"></textarea>
+            <label for="bloggerEmail" class="form-label">Email</label>
+            <input type="email" name="email" id="bloggerEmail" class="form-control w-100" placeholder="Enter your email address">
+            <br>
+            <label for="blogPost" class="form-label">Comments</label>
+            <textarea name="comment" id="blogPost" class="form-control" cols="30" rows="10" placeholder="Enter your blog here"></textarea>
         </form>
     </div>
 </div>
 <button type="submit" class="btn btn-dark btn-outline-light btn-sm" id="refreshPosts">Refresh</button>
+<img src="..." class="img-fluid" alt="...">
+<footer>
 
+</footer>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
