--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -11,31 +11,25 @@
 
   <!-- Mapbox CSS -->
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <!- Custom CSS -->
-  <link rel="stylesheet" href="css/custom.css">
-
-  <style>
-  #map {
-    /* the width and height may be set to any size */
-    width: 100%;
-    height: 700px;
-  }
-</style>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/mapbox_maps_api.css">
 </head>
 <body>
 
 <h1 class="text-center">What's the Haps Maps</h1>
 
 <!-- The HTML element that serves as the Mapbox container -->
-<div id='map'></div>
-
-
+<div id='map'>
+  <select name="zoom_preference">
+    <option value="5">5X</option>
+    <option value="15">15X</option>
+    <option value="20">20X</option>
+  </select>
+</div>
 
 <!-- JQuery -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -43,7 +37,8 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<!-- Custom JS -->
+<!-- mapbox utils js -->
 <script src="js/mapbox-geocoder-utils.js"></script>
+<script src="js/main_mapbox.js"></script>
 </body>
 </html>
