--- a/weather_map.html
+++ b/weather_map.html
@@ -7,12 +7,33 @@
     <title>API Weather Map</title>
   <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
 </head>
 <body>
-<h1 class="text-center">24 Hour Forecast</h1>
-<div id="weather-map"></div>
+    <header class="title">
+        <h1 class="text-center">24 Hour Forecast</h1>
+        <img class="img-fluid w-100" src="https://images.pexels.com/photos/395196/pexels-photo-395196.jpeg?auto=compress&cs=tinysrgb&w=800">
+    </header>
+    <main>
+        <input type="text" placeholder="Enter location here" id="citySearch">
+        <button id="searchBtn">Click to get weather report</button>
+        <div id="weather-map"></div>
+    </main>
 
+
+
+<!-- JQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Keys -->
+<script src="js/keys.js"></script>
+
+<!-- Mapbox Utils -->
+<script src="js/mapbox-geocoder-utils.js"></script>
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+<!-- Custom JS -->
+<script src="js/weather-map.js"></script>
 </body>
 </html>
