--- a/weather_map.html
+++ b/weather_map.html
@@ -13,12 +13,10 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body class="bg-primary">
-    <header class="title">
-        <h1 class="text-center text-light">24 Hour Forecast</h1>
-    </header>
+    <h1 class="text-center text-light">Weather Forecast</h1>
     <main>
         <div id='map' style='width: 100%; height: 300px;'></div>
-        <div id="weatherData"></div>
+        <div id="forecast"></div>
         <input type="text" placeholder="Enter location here" id="citySearch" class="m-1">
         <button id="searchBtn">Click to get weather report</button>
         <div class="container">
