--- a/weather_map.html
+++ b/weather_map.html
@@ -16,13 +16,16 @@
     <h1 class="text-center text-light">Weather Forecast</h1>
     <main>
         <div id='map' style='width: 100%; height: 300px;'></div>
-        <div id="forecast"></div>
         <input type="text" placeholder="Enter location here" id="citySearch" class="m-1">
         <button id="searchBtn">Click to get weather report</button>
         <div class="container">
-            <div class="card text-bg-light m-3" style="max-width: 15rem;">
-                <div class="card-header">hello</div>
-                <div class="card-body">world</div>
+            <div>
+                <h2 class="text-light text-decoration-underline">Today's Weather</h2>
+                <div id="currentCard" class="card text-bg-light m-3" style="max-width: 15rem;"></div>
+            </div>
+            <div>
+                <h2 class="text-light text-decoration-underline">5 Day Forecast:</h2>
+                <div id="cardGroup" class="d-grid text-bg-light m-3"></div>
             </div>
         </div>
     </main>
